argo-rollouts/backend-rollout.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: backend-rollout
  namespace: mern-devops
  labels:
    app: backend
spec:
  replicas: 2
  strategy:   # Define the deployment strategy as Canary  
    canary: 
      canaryService: backend-service-canary   # Service for canary traffic
      stableService: backend-service-stable   # Service for stable traffic
      trafficRouting:                         # Use NGINX for traffic routing
        nginx:
          stableIngress: rollout-nginx-stable # Ingress for stable service
      # Define the steps for the canary deployment
      steps:
      - setWeight: 20                         # Start by sending 20% traffic to canary
      - pause: {}                             # Manual intervention step
      - setWeight: 60                         # Increase to 60% traffic to canary
      - pause: { duration: 10s }              # 10 seconds pause before scaling up to 60%
      - setWeight: 100                        # Finally, send 100% traffic to canary  
      - pause: { duration: 10s }              # 10 seconds pause before scaling up to 100%
  revisionHistoryLimit: 2          # Keep the last 2 revisions
  selector:
    matchLabels:
      app: backend
  # Rest of the spec is similar to the Deployment spec
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: atkaridarshan04/bookstore-backend:prod.v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /books
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /books
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 15
