argo-rollouts/frontend-services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service-stable
  namespace: mern-devops
  labels:
    app: backend
    service-type: stable  # Identifies stable traffic service
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service-canary
  namespace: mern-devops
  labels:
    app: backend
    service-type: canary  # Identifies canary traffic service
  annotations:
    # Additional canary-specific annotations
    rollout.argoproj.io/canary-service: "true"
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
